# AquaDuct

./: .gitignore  Dockerfile_dagster  README.md  compose.common.yaml  compose.debug.yaml  compose.dev.yaml  compose.prod.yaml  compose.yaml  dagster.yaml  debug.sh  deploy.sh  docker-compose.yaml  pyproject.toml  run_dev.sh  workspace.yaml
dagster_deployment/: create_vm.sh  dagster.yaml  deploy.sh  docker-compose.yaml
fetch/: auth.py  backfill.py
fetch/tasks/: fetcher_task.py  test_fetcher_task.py
fetch/tasks/hydrovu/: hydrovu.py  test_hydrovu.py
pipelines/: Dockerfile  definitions.py
pipelines/definitions/hydrovu/: assets.py
pipelines/utils/: auth.py  resources.py  secrets.py
pipelines/workflows/cityofroswell/: assets.py  definitions.py  partitions.py  sensors.py
pipelines/workflows/cityofroswell/tests/: test_assets.py
pipelines/workflows/hydrovu/: assets.py  definitions.py
utils/: env.py  secrets.py  test_secrets.py
