[project]
name = "aquaduct"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.10.12",
    "dagster-docker>=0.26.12",
    "dagster-postgres>=0.26.12",
    "dagster-webserver>=1.10.12",
    "google-cloud-secret-manager>=2.23.3",
    "oauthlib>=3.2.2",
    "requests-oauthlib>=2.0.0",
]
